# vstreamer-protos

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
go/: Makefile  go.mod
go/vstreamer_protos/commander/: commander.pb.go  commander_grpc.pb.go
protos/vstreamer_protos/commander/: commander.proto
python/: Makefile
python/vstreamer_protos/commander/: commander_pb2.py  commander_pb2.pyi
rust/: Cargo.toml  Makefile
rust/src/: main.rs
rust/vstp_builder/: Cargo.toml
rust/vstp_builder/src/: main.rs
rust/vstreamer_protos/: Cargo.toml
rust/vstreamer_protos/src/: voicerecog.rs
vstreamer_protos/commander/: commander_pb2.py  commander_pb2.pyi  commander_pb2_grpc.py  commander_pb2_grpc.pyi
